[package]
name = "package_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
flate2 = "1.0.25"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tar = "0.4.38"
tokio = { version = "1.25.0", features = ["full"] }
